--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
             -webkit-mask-repeat: no-repeat;
             mask-repeat: no-repeat;
         }
+        .start-tirai {
+            transform: translateY(-1200px);
+            transition: all 1s ease-in-out;
+        }
     </style>
 
     <title>Pinangan ID</title>
@@ -58,11 +62,11 @@
         <div class="absolute top-0 left-0 w-full h-full lg:py-10 bg-no-repeat bg-cover bg-center"
             style="background-image: url(./images/background/background.jpg);"></div>
         <img src="images/background/header-1.png" alt="bunga"
-            class="animate-[wiggle_10s_ease-in-out_infinite] absolute -bottom-32 lg:-bottom-[150px] -left-40 lg:-left-[200px] w-[300px] md:w-[400px] lg:w-[600px]">
+            class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-32 lg:-bottom-[150px] -left-40 lg:-left-[200px] w-[300px] md:w-[400px] lg:w-[600px]">
         <img src="images/background/header-2.png" alt="bunga"
-            class="animate-[wiggle_10s_ease-in-out_infinite] absolute -bottom-[70px] lg:-bottom-[150px] -right-[70px] lg:-right-[150px] w-[200px] md:w-[300px] lg:w-[500px]">
+            class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-[70px] lg:-bottom-[150px] -right-[70px] lg:-right-[150px] w-[200px] md:w-[300px] lg:w-[500px]">
         <img src="images/background/kupu1.png" alt="kupu-kupu"
-            class="animate-[wiggle_10s_ease-in-out_infinite] absolute top-0 md:top-[50px] lg:top-1/4 lg:-translate-y-1/4 left-1/4 md:left-[300px] md:translate-x-0 lg:left-1/4 lg:-translate-x-1/4 w-[160px] lg:w-[240px]">
+            class="animate-[wiggle_5s_ease-in-out_infinite] absolute top-0 md:top-[50px] lg:top-1/4 lg:-translate-y-1/4 left-1/4 md:left-[300px] md:translate-x-0 lg:left-1/4 lg:-translate-x-1/4 w-[160px] lg:w-[240px]">
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="text-center lg:ml-auto lg:mr-10 lg:w-8/12">
                 <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-14 md:mb-10 font-medium italic">
@@ -74,9 +78,9 @@
                 <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-6 md:mb-10 font-medium">
                     29 FEBRUARY 2021
                 </div>
-                <a href="#bukaUndangan" id="btnBukaUndangan" onclick="bukaUndangan()" class="font-belle text-sm md:text-xl text-cream-50 bg-oldGreen-100 py-3 px-6 rounded-xl border border-black-100 mb-20">
+                <!-- <a href="#bukaUndangan" id="btnBukaUndangan" onclick="bukaUndangan()" class="font-belle text-sm md:text-xl text-cream-50 bg-oldGreen-100 py-3 px-6 rounded-xl border border-black-100 mb-20">
                     <i class="fa-solid fa-envelope mr-2"></i> Buka Undangan
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
@@ -100,7 +104,7 @@
                         <p class="js-show-fadeInDown font-belle text-base md:text-2xl text-oldGreen-500 font-medium">
                             (QS Ar-Rum : 21)
                         </p>
-                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute -top-20 md:top-10 -right-0 md:-right-20 w-[100px] md:w-[140px] lg:w-[200px] -scale-x-100">
+                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute -top-20 md:top-10 -right-0 md:-right-20 w-[100px] md:w-[140px] lg:w-[200px] -scale-x-100">
                     </div>
                 </div>
             </div>
@@ -121,14 +125,14 @@
                             <br>
                             kami hendak menyampaikan kabar bahagia atas pernikahaan putra putri kami:
                         </p>
-                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-20 md:top-32 -right-0 md:right-32 lg:right-48 w-[100px] md:w-[140px] lg:w-[200px]">
+                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-20 md:top-32 -right-0 md:right-32 lg:right-48 w-[100px] md:w-[140px] lg:w-[200px]">
 
                         <div class="relative js-show-zoomIn md:mb-20" id="section-mempelai">
                             <img src="./images/background/bg-text-1.png" class="w-9/12 sm:w-6/12 mx-auto" alt="">
                             <h1 class="absolute top-2/4 -translate-y-2/4 left-2/4 -translate-x-2/4 font-nautigal text-5xl sm:text-7xl text-oldRose-400 italic">
                                 Mempelai
                             </h1>
-                            <img src="images/background/kupu3.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-2 lg:top-6 -left-0 md:left-[80px] lg:left-0 w-[50px] md:w-[70px] lg:w-[100px]">
+                            <img src="images/background/kupu3.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-2 lg:top-6 -left-0 md:left-[80px] lg:left-0 w-[50px] md:w-[70px] lg:w-[100px]">
                         </div>
                     </div>
                 </div>
@@ -239,9 +243,9 @@
                 </div>
             </div>
             <img src="images/background/buket-bunga-1.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-0 -left-10 lg:-left-20 w-[160px] md:w-[250px] lg:w-[400px]">            
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-0 -left-10 lg:-left-20 w-[160px] md:w-[250px] lg:w-[400px]">            
             <img src="images/background/buket-bunga-2.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -bottom-[100px] lg:-bottom-[200px] -right-[70px] lg:-right-[140px] w-[180px] md:w-[250px] lg:w-[400px]">
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -bottom-[123px] lg:-bottom-[200px] -right-[70px] lg:-right-[140px] w-[200px] md:w-[250px] lg:w-[400px]">
         </section>
     </div>
 
@@ -273,7 +277,7 @@
                 </div>
             </div>
             <img src="images/background/buket-bunga-2.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -top-[145px] md:-top-[245px] lg:-top-[346px] -right-[70px] lg:-right-[140px] w-[180px] md:w-[250px] lg:w-[400px]">
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -top-[150px] md:-top-[245px] lg:-top-[346px] -right-[70px] lg:-right-[140px] w-[200px] md:w-[250px] lg:w-[400px]">
         </section>
     </div>
 
@@ -294,7 +298,7 @@
                     <div class="md:text-right ml-8 md:ml-0 relative md:pr-10 md:border-r-2 md:border-oldGreen-500">
                         <p class="font-nautigal text-3xl md:text-4xl text-oldGreen-500 mb-0">2015</p>
                         <p class="font-belle text-base md:text-xl font-medium text-oldGreen-500">Januari</p>
-                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-0 md:top-32 right-0 md:right-48 w-[80px] md:w-[160px]">
+                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-0 md:top-32 right-0 md:right-48 w-[80px] md:w-[160px]">
                     </div>
                     <div class="flex pl-8 md:pl-10 pb-5 relative">
                         <div class="absolute -top-[8px] -left-[12px]"><i class="fa-solid fa-heart text-2xl text-oldGreen-500"></i></div>
@@ -340,7 +344,7 @@
                     <div class="relative md:text-right ml-8 md:ml-0 md:pr-10 md:border-r-2 md:border-oldGreen-500">
                         <p class="font-nautigal text-3xl md:text-4xl text-oldGreen-500 mb-0">2015</p>
                         <p class="font-belle text-base md:text-xl font-medium text-oldGreen-500">Januari</p>
-                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-0 md:top-32 right-0 md:right-48 w-[80px] md:w-[160px]">
+                        <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-0 md:top-32 right-0 md:right-48 w-[80px] md:w-[160px]">
                     </div>
                     <div class="flex pb-5 pl-8 md:pl-10 relative">
                         <div class="absolute top-0 -left-[12px]"><i class="fa-solid fa-heart text-2xl text-oldGreen-500"></i></div>
@@ -353,7 +357,7 @@
                 </div>
             </div>            
             <img src="images/background/buket-bunga-1.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -bottom-[72px] lg:-bottom-[200px] -left-10 lg:-left-20 w-[160px] md:w-[200px] lg:w-[400px]">
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -bottom-[72px] lg:-bottom-[200px] -left-10 lg:-left-20 w-[160px] md:w-[200px] lg:w-[400px]">
         </section>
     </div>
 
@@ -404,9 +408,9 @@
                 </div>
             </div>                         
             <img src="images/background/buket-bunga-1.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -top-[100px] lg:-top-[231px] -left-10 lg:-left-20 w-[160px] md:w-[200px] lg:w-[400px]"> 
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -top-[100px] lg:-top-[231px] -left-10 lg:-left-20 w-[160px] md:w-[200px] lg:w-[400px]"> 
             <div class="absolute bottom-0 left-0 w-full h-[50px] lg:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-atas.png);"></div>   
-            <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute bottom-0 right-1/4 w-[80px] lg:w-[160px] -scale-x-100">  
+            <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute bottom-0 right-1/4 w-[80px] lg:w-[160px] -scale-x-100">  
         </section>
     </div>
 
@@ -575,16 +579,16 @@
                         </div>
                     </div>
                 </div>
-                <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-0 right-0 lg:left-2/4 lg:-translate-x-2/4 w-[80px] md:w-[120px] lg:w-[160px]">  
+                <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-0 right-0 lg:left-2/4 lg:-translate-x-2/4 w-[80px] md:w-[120px] lg:w-[160px]">  
             </div>       
             <img src="images/background/buket-bunga-2.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -bottom-[63px] md:-bottom-[100px] lg:-bottom-[200px] -right-[50px] lg:-right-[140px] w-[120px] md:w-[180px] lg:w-[340px]">        
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -bottom-[63px] md:-bottom-[100px] lg:-bottom-[200px] -right-[50px] lg:-right-[140px] w-[120px] md:w-[180px] lg:w-[340px]">        
         </section>
     </div>
 
     <div class="isi-undangan hidden">
-        <section class="js-show-fadeIn py-6 lg:py-10 w-full h-full lg:h-screen flex items-center justify-center relative overflow-hidden">
-            <div class="absolute top-0 left-0 w-full h-full lg:h-screen bg-no-repeat bg-cover bg-center -scale-y-100"
+        <section class="js-show-fadeIn py-6 lg:py-10 w-full h-full lg:min-h-screen flex items-center justify-center relative overflow-hidden">
+            <div class="absolute top-0 left-0 w-full h-full lg:min-h-screen bg-no-repeat bg-cover bg-center -scale-y-100"
                 style="background-image: url(./images/background/background.jpg);"></div>
             <div class="container max-w-screen-xl px-4 lg:px-0 mx-auto relative">
                 <div class="js-show-fadeInUp columns-1 bg-grey-50 rounded-3xl p-10 mb-8 lg:mb-20 box-clip-path-sm">
@@ -643,11 +647,11 @@
                             </p>
                         </div>
                     </div>
-                    <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_6s_ease-in-out_infinite] absolute top-4 lg:top-0 left-4 lg:left-10 w-[80px] lg:w-[160px] -scale-x-100">  
+                    <img src="images/background/kupu2.png" alt="kupu-kupu" class="animate-[wiggle_4s_ease-in-out_infinite] absolute top-4 lg:top-0 left-4 lg:left-10 w-[80px] lg:w-[160px] -scale-x-100">  
                 </div>
             </div>
             <img src="images/background/buket-bunga-2.png" alt="bunga"
-                class="animate-[wiggle_6s_ease-in-out_infinite] absolute -top-[100px] md:-top-[164px] lg:-top-[264px] -right-[50px] lg:-right-[140px] w-[120px] md:w-[180px] lg:w-[340px]">
+                class="animate-[wiggle_4s_ease-in-out_infinite] absolute -top-[100px] md:-top-[164px] lg:-top-[264px] -right-[50px] lg:-right-[140px] w-[120px] md:w-[180px] lg:w-[340px]">
         </section>
     </div>
 
@@ -666,9 +670,9 @@
     </div>
 
     <div class="isi-undangan hidden">
-        <section class="w-full h-screen lg:h-[900px] flex items-end justify-center relative bg-no-repeat bg-cover bg-center bg-fixed"
+        <section class="w-full h-screen lg:h-[800px] flex items-end justify-center relative bg-no-repeat bg-cover bg-center bg-fixed"
             style="background-image: url(./images/background/bg-footer.jpg);">
-            <div class=" js-show-fadeIn absolute top-0 left-0 w-full h-screen lg:h-[900px] opacity-60"
+            <div class=" js-show-fadeIn absolute top-0 left-0 w-full h-screen lg:h-[800px] opacity-60"
                 style="background-image: linear-gradient(180deg, #FFFFFF00 0%, #171717 100%);"></div>            
             <div class="absolute top-0 left-0 w-full h-[50px] lg:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-bawah-2.png);"></div>
         </section>
@@ -718,6 +722,28 @@
         </div>
     </div>
 
+    
+
+    <section class="absolute top-0 left-0 tirai-undangan w-full min-h-screen lg:py-4 flex items-center justify-center bg-cover bg-center" id="section-tirai" style="background-image: url('./images/background/bg-tirai.webp');">
+        <div class="container max-w-screen-xl mx-auto relative">
+            <div class="text-center lg:w-7/12 mx-auto">
+                <img src="./images/background/bg-frame-foto.png" class="w-3/4 lg:w-2/4 mx-auto" alt="Frame">
+                <h1 class="font-nautigal text-5xl lg:text-7xl text-oldRose-500 italic mb-6">
+                    Kiara & Kofu
+                </h1>
+                <div class="font-belle text-base md:text-lg text-oldGreen-500 mb-4 font-medium">
+                    Kepada Bpk/Ibu/Saudara/i
+                </div>
+                <div class="font-belle text-base md:text-lg text-oldGreen-500 mb-6 font-medium">
+                    Kami mengundang anda untuk hadir di pernikahan kami.
+                </div>
+                <a href="javascript:void(0)" id="btnBukaUndangan" onclick="bukaUndangan()" class="font-belle text-sm md:text-base text-cream-50 bg-oldGreen-100 py-3 px-6 rounded-xl border border-black-100">
+                    <i class="fa-solid fa-envelope mr-2"></i> Buka Undangan
+                </a>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/lightgallery/lightgallery.min.js"></script>
     <script src="./js/lightgallery/lg-zoom.min.js"></script>
@@ -735,12 +761,14 @@
     <script type="text/javascript">
         // BUKA UNDANGAN
         const isiUndangan = document.querySelectorAll('.isi-undangan')
+        const tirai = document.getElementById('section-tirai')
+        let counter = 0
         function bukaUndangan() {
+            document.getElementById('section-tirai').classList.add("start-tirai")
             setAudio()
             isiUndangan.forEach(item => {
                 item.classList.remove('hidden')
             })
-            document.getElementById("btnBukaUndangan").classList.add("hidden")
         }
 
         // LOAD FADEIN
