--- a/public/index.html
+++ b/public/index.html
@@ -58,32 +58,34 @@
 
 <body class="">
 
-    <section class="cover-undangan w-full min-h-screen lg:py-10 flex items-center justify-center relative overflow-hidden" id="section-home">
-        <div class="absolute top-0 left-0 w-full h-full lg:py-10 bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.jpg);"></div>
-        <img src="images/background/header-1.png" alt="bunga"
-            class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-32 lg:-bottom-[150px] -left-40 lg:-left-[200px] w-[300px] md:w-[400px] lg:w-[600px]">
-        <img src="images/background/header-2.png" alt="bunga"
-            class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-[70px] lg:-bottom-[150px] -right-[70px] lg:-right-[150px] w-[200px] md:w-[300px] lg:w-[500px]">
-        <img src="images/background/kupu1.png" alt="kupu-kupu"
-            class="animate-[wiggle_5s_ease-in-out_infinite] absolute top-0 md:top-[50px] lg:top-1/4 lg:-translate-y-1/4 left-1/4 md:left-[300px] md:translate-x-0 lg:left-1/4 lg:-translate-x-1/4 w-[160px] lg:w-[240px]">
-        <div class="container max-w-screen-xl mx-auto relative">
-            <div class="text-center lg:ml-auto lg:mr-10 lg:w-8/12">
-                <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-14 md:mb-10 font-medium italic">
-                    THE WEDDING OF
+    <div class="isi-undangan hidden">
+        <section class="w-full min-h-screen lg:py-10 flex items-center justify-center relative overflow-hidden" id="section-home">
+            <div class="absolute top-0 left-0 w-full h-full lg:py-10 bg-no-repeat bg-cover bg-center"
+                style="background-image: url(./images/background/background.jpg);"></div>
+            <img src="images/background/header-1.png" alt="bunga"
+                class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-32 lg:-bottom-[150px] -left-40 lg:-left-[200px] w-[300px] md:w-[400px] lg:w-[600px]">
+            <img src="images/background/header-2.png" alt="bunga"
+                class="animate-[wiggle_5s_ease-in-out_infinite] absolute -bottom-[70px] lg:-bottom-[150px] -right-[70px] lg:-right-[150px] w-[200px] md:w-[300px] lg:w-[500px]">
+            <img src="images/background/kupu1.png" alt="kupu-kupu"
+                class="animate-[wiggle_5s_ease-in-out_infinite] absolute top-0 md:top-[50px] lg:top-1/4 lg:-translate-y-1/4 left-1/4 md:left-[300px] md:translate-x-0 lg:left-1/4 lg:-translate-x-1/4 w-[160px] lg:w-[240px]">
+            <div class="container max-w-screen-xl mx-auto relative">
+                <div class="text-center lg:ml-auto lg:mr-10 lg:w-8/12">
+                    <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-14 md:mb-10 font-medium italic">
+                        THE WEDDING OF
+                    </div>
+                    <h1 class="font-nautigal text-8xl md:text-[180px] lg:text-[200px] text-oldRose-500 italic mb-14 md:mt-10 lg:mt-28 md:mb-14">
+                        Kiara & Kofu
+                    </h1>
+                    <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-6 md:mb-10 font-medium">
+                        29 FEBRUARY 2021
+                    </div>
+                    <!-- <a href="#bukaUndangan" id="btnBukaUndangan" onclick="bukaUndangan()" class="font-belle text-sm md:text-xl text-cream-50 bg-oldGreen-100 py-3 px-6 rounded-xl border border-black-100 mb-20">
+                        <i class="fa-solid fa-envelope mr-2"></i> Buka Undangan
+                    </a> -->
                 </div>
-                <h1 class="font-nautigal text-8xl md:text-[180px] lg:text-[200px] text-oldRose-500 italic mb-14 md:mt-10 lg:mt-28 md:mb-14">
-                    Kiara & Kofu
-                </h1>
-                <div class="font-belle text-mobile md:text-2xl text-oldGreen-500 mb-6 md:mb-10 font-medium">
-                    29 FEBRUARY 2021
-                </div>
-                <!-- <a href="#bukaUndangan" id="btnBukaUndangan" onclick="bukaUndangan()" class="font-belle text-sm md:text-xl text-cream-50 bg-oldGreen-100 py-3 px-6 rounded-xl border border-black-100 mb-20">
-                    <i class="fa-solid fa-envelope mr-2"></i> Buka Undangan
-                </a> -->
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     
 
